# AnchorPoint

./: .gitignore  APPROACH_STATEMENT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MIGRATION_CHECKER_SUMMARY.md  MULTISIG_SERVICE_SUMMARY.md  PULL_REQUEST.md  QUICK_START_ERROR_FEEDBACK.md  README.md  RECONNAISSANCE_COMPLETE.md  RECONNAISSANCE_FINDINGS.md  REENTRANCY_GUARD_SUMMARY.md  TASK_QUEUE_SUMMARY.md  Untitled  current_git_status.txt  docker-compose.testnet.yml  docker-compose.yml  final_merge.py  final_merge_log.txt  implementation.md  implementation_plan.md  mutants.toml  open_prs.json  output.txt  package-lock.json  package.json  prometheus.yml  remotes.txt  robust_merge_log.txt  robust_merger.py  run_output.txt
.github/workflows/: backend.yml  dashboard.yml  migration-integrity.yml  rust.yml
.kiro/specs/sep12-large-file-uploads/: .config.kiro  requirements.md
backend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  SEP10_MULTI_KEY_SUMMARY.md  jest.config.js  migration-checker.config.json  package-lock.json  package.json  run-e2e.js  test_output.txt  tsconfig.json  tsconfig.perf.json
backend/.husky-example/: pre-commit
backend/docs/: FEATURE_FLAGS.md  KEY_MANAGEMENT.md  MIGRATION_EXAMPLE.md  MIGRATION_INTEGRITY.md  MULTISIG_COORDINATION.md  SEP40_SWAP_RATES.md  SOROBAN_ERROR_HANDLING.md  TASK_QUEUE.md
backend/examples/: multisig-client-example.ts
backend/perf/: README.md  bench.ts
backend/prisma/: dev.db  schema.prisma
backend/prisma/prisma/: dev.db
backend/scripts/: README.md  check-migrations.js  generate-rollback.ts  migration-integrity-checker.test.ts  migration-integrity-checker.ts  tsconfig.json  verify-migrations.ts
backend/src/: index.test.ts  index.ts
contracts/: Cargo.toml
contracts/anchorpoint/: Cargo.toml
contracts/anchorpoint/src/: admin.rs  lib.rs  rate_limit.rs  storage_keys.rs
contracts/anchorpoint/src/tests/: admin_tests.rs  mod.rs  rate_limit_tests.rs
contracts/bridge_stub/: Cargo.toml
contracts/bridge_stub/src/: lib.rs
contracts/governance/src/tests/: mod.rs
contracts/liquid_staking/: Cargo.toml
contracts/liquid_staking/src/: lib.rs
contracts/liquid_staking/test_snapshots/tests/: test_stake_and_mint_nft.1.json  test_transfer_and_claim.1.json  test_unstake_locked.1.json
contracts/nft_metadata/: Cargo.toml
contracts/nft_metadata/src/: lib.rs
contracts/random_gen/: Cargo.toml  README.md
contracts/random_gen/src/: lib.rs
contracts/reentrancy-guard/: Cargo.toml  README.md  SECURITY_GUIDE.md
contracts/reentrancy-guard/examples/: protected_vault.rs  vulnerable_vault.rs
contracts/reentrancy-guard/src/: lib.rs
contracts/registry/: Cargo.toml  README.md
contracts/registry/src/: lib.rs
contracts/revenue_distributor/: Cargo.toml
contracts/revenue_distributor/src/: lib.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs
contracts/swap/: Cargo.toml  README.md  lib.rs
contracts/swap/src/: lib.rs
contracts/swap/tests/: fuzz_slippage.proptest-regressions  fuzz_slippage.rs
contracts/xlm_wrapper/: Cargo.toml  README.md
contracts/xlm_wrapper/src/: lib.rs
contracts/yield/: Cargo.toml
contracts/yield/src/: lib.rs
dashboard/: cypress.config.ts  index.html  package.json  tailwind.config.js  vitest.config.ts
dashboard/src/: App.tsx  index.css  types.ts
demo/: package.json  server.js
docs/: mock-server.md  postman-collection.json  rate-limiting.md
infra/kibana/: dashboard.ndjson
infra/logstash/: pipeline.conf
scripts/: backup.sh
src/amm/: Cargo.toml  lib.rs
src/auth/: Cargo.toml  rbac.rs
src/batch/: lib.rs  test.rs
src/benchmarks/: Cargo.toml
src/bridge/: Cargo.toml  lib.rs
src/circuit_breaker/: Cargo.toml  lib.rs
src/escrow_multisig/: lib.rs
src/escrow_timelock/: Cargo.toml  lib.rs
src/event_hub/: Cargo.toml  README.md  lib.rs
src/flash_loan/: lib.rs  tests.rs  verification.rs
src/governance/: Cargo.toml  lib.rs
src/indexing/: Cargo.toml  lib.rs
src/kyc/: Cargo.toml  lib.rs
src/liquidation/: Cargo.toml  lib.rs
src/oracle_consumer/: Cargo.toml  lib.rs
src/oracle_medianizer/: Cargo.toml  lib.rs
src/oracle_medianizer/test_snapshots/tests/: test_add_oracle_source.1.json  test_initialize.1.json  test_submit_and_calculate_median.1.json
src/proxy/: Cargo.toml  lib.rs
src/random/: Cargo.toml  lib.rs
src/random/src/: lib.rs
src/random/test_snapshots/tests/: test_commit_and_reveal_flow.1.json  test_initialize.1.json  test_start_round.1.json
src/security_registry/: Cargo.toml  lib.rs
src/staking/: Cargo.toml  lib.rs  snapshot.rs
src/token/: Cargo.toml  lib.rs
src/upgradeable/: Cargo.toml  lib.rs
src/utils/: Cargo.toml  c2c.rs  contract_metadata.rs  events.rs  fees.rs  lib.rs
src/utils/src/: lib.rs
src/utils/test_snapshots/tests/: test_emit_deposit.1.json  test_emit_voted.1.json
src/vesting/: Cargo.toml  lib.rs
src/yield_farming/: Cargo.toml
tools/mock-server/: package-lock.json  package.json  tsconfig.json
(+332 files in other folders)
