[workspace]
members = [
    "src/upgradeable",
    "src/token",
    "src/escrow_multisig",
    "src/governance",
    "src/auth",
    "src/amm",
    "src/oracle_consumer",
    "src/batch",
    "src/utils",
    "src/flash_loan",
    "src/kyc",
    "src/staking",
    "src/escrow_timelock",
    "src/security_registry"
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
