[workspace]
members = [
    "src/upgradeable",
    "src/token",
    "src/escrow_multisig",
    "src/governance",
    "src/auth",
    "src/amm",
    "src/oracle_consumer",
    "src/batch",
    "src/utils",
    "src/flash_loan",
    "src/kyc",
    "src/staking",
    "src/bridge",
    "src/escrow_timelock",
    "src/indexing",
    "src/liquidation",
    "src/oracle_medianizer",
    "src/random",
    "src/security_registry",
    "src/vesting",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = false
debug = 0
strip = true
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"
