[workspace]
members = ["yield", "nft_metadata", "liquid_staking", "xlm_wrapper", "registry"]
members = ["yield", "nft_metadata", "liquid_staking", "swap"]
resolver = "2"
members = ["yield", "nft_metadata", "liquid_staking", "staking", "random_gen", "bridge_stub", "revenue_distributor"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
soroban-sdk = "22.0.0"