[package]
name = "anchorpoint-random"
version = "0.1.0"
edition = "2021"
description = "Secure random number generation using commit-reveal scheme"

[dependencies]
soroban-sdk = "22.0.0"

[lib]
name = "anchorpoint_random"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
